<resources>
    <string name="app_name">biodatapuspa</string>
    <string name="image4">myprofil</string>
    <string name="imageView3">background</string>
    <string name="judul">Biodata</string>
    <string name="data">Puspa Sari dian A</string>
    <string name="email">puspasaridiananggraeni@gmail.com</string>
    <string name="Deskripsi">Deskripsi</string>
    <string name="detail">belajaddgysgfydsyfughfgdgfdgudutgdu</string>
</resources>
